@@ -543,11 +543,11 @@ DRIVER(tftc,300)        //               11/93 Tales From the Crypt (3.00)
 DRIVER(tftc,302)        //               11/93 Tales From the Crypt (3.02 Dutch)
 DRIVER(tftc,303)        //               11/93 Tales From the Crypt (3.03)
 DRIVER(tftc,400)        //               10/15 Tales From the Crypt (4.00 unofficial MOD)
-DRIVER(tomy,102)        //Data East MPU: 02/94 The Who's Tommy Pinball Wizard (1.02)
-DRIVER(tomy,102be)      //               02/94 The Who's Tommy Pinball Wizard (1.02 Belgian)
+DRIVER(tomy,102)        //Data East MPU: 01/94 The Who's Tommy Pinball Wizard (1.02)
+DRIVER(tomy,102be)      //               01/94 The Who's Tommy Pinball Wizard (1.02 Belgian)
 DRIVER(tomy,h30)        //               02/94 The Who's Tommy Pinball Wizard (3.00 Dutch)
-DRIVER(tomy,301g)       //               02/94 The Who's Tommy Pinball Wizard (3.01 German)
-DRIVER(tomy,400)        //               02/94 The Who's Tommy Pinball Wizard (4.00)
+DRIVER(tomy,301g)       //               03/94 The Who's Tommy Pinball Wizard (3.01 German)
+DRIVER(tomy,400)        //               05/94 The Who's Tommy Pinball Wizard (4.00)
 DRIVER(tomy,500)        //               05/16 The Who's Tommy Pinball Wizard (5.00 unofficial MOD)
 DRIVER(wwfr,103)        //Data East MPU: 05/94 WWF Royal Rumble (1.03)
 DRIVER(wwfr,103f)       //               05/94 WWF Royal Rumble (1.03 French)
@@ -1187,6 +1187,13 @@ DRIVERNV(trebol)        //Trebol (1985)
 // ROWAMET
 // ----------------
 DRIVERNV(heavymtl)      //Heavy Metal (198?)
+
+// ----------------
+// SEEBEN
+// ----------------
+DRIVERNV(penalty)       //Penalty (Bingo) (19??)
+DRIVERNV(brooklyn)      //Brooklyn (Bingo) (19??)
+DRIVERNV(newdixie)      //New Dixieland (Bingo) (19??)
 
 // --------------
 // SEGA GAMES
